--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2,9 +2,11 @@
   font-size: 60%;
   --color-background: #FFFFFF;
   --color-header-footer-background: #707070;
+  --color-border-inputs: #707070;
   --color-font: #888888;
   --color-font-header: #FFFFFF;
   --color-border-buttons: #00000029;
+  --width: 918px;
 }
 
 * {
@@ -25,6 +27,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 body,
@@ -37,6 +40,10 @@ textarea {
 .container { 
   width: 90vw;
   max-width: 700px;
+}
+
+input[type=radio]{
+  /* background-color: red; */
 }
 
 @media (min-width: 700px){
@@ -101,4 +108,71 @@ textarea {
   border: 1px solid var(--color-header-footer-background);
   border-radius: 4px;
   cursor: pointer;
+}
+
+
+/* ======================= second-section-info-form ============================= */
+#second-section-info-form {
+  margin-top: 90px;
+  display: flex;
+  width: var(--width);
+}
+
+#second-section-info-form .title-algorithm-content {
+  color: var(--color-font);
+  font: 500 20px Helvetica;
+  text-align: left;
+}
+
+#second-section-info-form #text-algorithm-content {
+  width: 520px;
+}
+
+#second-section-info-form #text-algorithm-content > p {
+  color: var(--color-font);
+  font: 500 12px/18px Helvetica;
+  text-align: left;
+  margin-top: 30px;
+}
+
+#second-section-info-form #form-contact-content {
+  /* width: 690px; */
+  margin-left: 55px;
+} 
+
+#second-section-info-form #form-contact-content .label-form {
+  color: var(--color-font);
+  font: 500 12px Helvetica;
+} 
+
+#second-section-info-form #form-contact-content .form-label-input {
+  display: flex;
+  flex-direction: column;
+}
+
+#second-section-info-form #form-contact-content .form-label-input > input {
+  margin-top: 7px;
+  margin-bottom: 20px;
+  width: 340px;
+  height: 30px;
+  border: 1px solid var(--color-border-inputs);
+}
+
+#second-section-info-form #form-contact-content .form-label-input .radio-buttons-content {
+  display: flex;
+  align-items: center;
+}
+
+#form-contact-content button {
+  width: 100%;
+  height: 40px;
+  margin-top: 23px;
+  background: var(--color-background);
+  border: 1px solid var(--color-border-inputs);
+  border-radius: 4px;
+}
+
+#form-contact-content, button > span {
+  font: 500 16px Helvetica;
+  color: var(--color-font);
 }
