--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,7 +5,9 @@
   --color-border-inputs: #707070;
   --color-font: #888888;
   --color-font-header: #FFFFFF;
+  --color-font-footer: #FFFFFF;
   --color-border-buttons: #00000029;
+  --color-font-message-form: #ff0000b3;
   --width: 918px;
 }
 
@@ -220,6 +222,12 @@ textarea {
   margin-top: 40px;  
 }
 
+#section-product-content .products-area > div {
+  text-align: center;
+  margin-top: 13px;
+  margin-bottom: 128px;
+}
+
 .product-articles-content {
   display: flex;
   flex-wrap: wrap;
@@ -228,7 +236,6 @@ textarea {
 
 .product-article {
   width: 200px;
-  
 }
 
 .product-name {
@@ -264,9 +271,23 @@ textarea {
 .button-buy-product {
   width: 200px;
   height: 30px;
+  margin-bottom:39px;
   border-radius: 4px;
   border: 1px solid var(--color-border-inputs);
   cursor: pointer;
+}
+
+.button-more-products{
+  width: 260px;
+  height: 39px;
+  border-radius: 4px;
+  border: 1px solid var(--color-border-inputs);
+  cursor: pointer;
+}
+
+.button-more-products > span {
+  font: 500 16px helvetica;
+  color: var(--color-font);
 }
 
 .button-buy-product > span {
@@ -307,7 +328,7 @@ textarea {
 #section-news-form .news-form-inline{
   display: flex;
   justify-content: space-evenly;
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 #section-news-form {
@@ -319,14 +340,61 @@ textarea {
   width: 100%;
   text-align: center;
   margin-top: 40px;
-  border: 1px  solid red;
 }
 
-.news-button-content, button {
+.news-button-content > button {
   width: 260px;
   height: 39px;
   background: var(--color-background);
   border-radius: 4px;
-  border: 1px solid var(--color-border-buttons);
+  border: 1px solid var(--color-border-inputs);
+  cursor: pointer;
 }
 
+.news-button-content, button > span {
+  font: 500 16px Helvetica;
+  color: var(--color-font);
+}
+
+#responseCheckedField {
+  display: flex;
+  justify-content: center;
+  color: var(--color-font-message-form);
+}
+
+/* ===================================== Footer =================================== */
+
+#footer-content {
+  width: 100%;
+  height: 293px;
+  margin-top: 72px;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  background: var(--color-header-footer-background);
+  transform: skewY(-7deg);
+}
+
+#footer-content #footer-sub-content {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--color-header-footer-background);
+  transform: skewY(7deg);
+  text-align: center;
+}
+
+#footer-content .footer-info-content {
+  width: 260px;
+  height: 50px;
+  margin-top: 157px;
+  margin-bottom: 86px;
+  /* text-align: center; */
+}
+
+#footer-content .footer-info-content > span {
+  font: 500 12px Helvetica;
+  color: var(--color-font-footer);
+}
