--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -399,9 +399,25 @@ body {
   color: var(--color-font-footer);
 }
 
+@font-face {
+	font-family: Helvetica;
+	src: url(../fonts/helvetica-1.otf);
+}
+
 /* =========================== Responsive ================================ */
 
 @media (max-width: 420px){
+
+  hr {
+    width: 381px;
+  }
+    
+  #root {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
   #header-content {
    height: 397px;
    width: 100%;
@@ -419,9 +435,8 @@ body {
   } 
 
   #nav-content {
-    
     /* flex-direction: column; */
-    width: 345px;
+    width: 345px !important;
     height: 111px !important;
     flex-direction: column;
   }
@@ -438,6 +453,48 @@ body {
   #second-section-info-form {
     display: flex;
     flex-direction: column;
+    width: 420px;
+    padding: 16px;
   }
 
+  #text-algorithm-content {
+    display: flex;
+    flex-direction: column;
+    width: 386px !important;
+  }
+
+  #form-contact-content {
+    margin-top: 30px;
+    margin-left: 17px !important;
+  }
+
+  #section-product-content {
+    margin-top: 91px;
+    width: 392px;
+  }
+
+  .product-articles-content {
+    margin-top: 23px;
+    width: 392px;
+  }
+  .products-area {
+    width: 392px;
+  }
+
+  .product-articles-content, article {
+    display: flex;
+    justify-content: center;
+    width: 403px;
+  }
+
+  /* .product-articles-content, article {
+    
+  } */
+
+  #share-news-content{
+    width: 386px;
+  }
+  #section-news-form .news-form-inline{
+    display: block;
+  }
 }
